<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgk"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:padding="6sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textAllCaps="true"
            android:textColor="@color/radio"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/answer_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/answer_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vie"
            android:inputType="text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/answer_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Teal"
            android:inputType="textMultiLine"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fourth"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="24sp"
            android:layout_marginStart="24sp">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8sp"
                android:paddingRight="8sp"
                android:text="@string/ancient"
                android:textColor="@color/radio"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8sp"
                android:paddingRight="8sp"
                android:text="@string/jazz"
                android:textColor="@color/radio"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8sp"
                android:paddingRight="8sp"
                android:id="@+id/transpiration"
                android:text="@string/uptown"
                android:textColor="@color/radio"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8sp"
                android:paddingRight="8sp"
                android:text="@string/pop"
                android:textColor="@color/radio"
                android:textSize="18sp" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fifth"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cool"
            android:text="@string/Blue"
            android:textSize="18sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mineral"
            android:text="@string/Grey"
            android:textSize="18sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/water"
            android:text="@string/Teal"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/google"
            android:contentDescription="@string/todo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vie"
            android:inputType="text"
            android:textSize="16sp"/>


        <Button
            android:id="@+id/score_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showScore"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:background="@drawable/background"
            android:textSize="18sp" />

    </LinearLayout>


</ScrollView>